fix: general page improvement and missing detail

--- a/index.html
+++ b/index.html
@@ -252,12 +252,12 @@
 
                 <div class="absolute inset-0 z-20">
                     <div class="hidden md:flex absolute inset-0 flex-col justify-end items-center p-6 space-y-2">
-                        <div data-lucide="handshake" class="text-white w-icon-fluid h-icon-fluid"></div>
-                        <div class="text-white text-4xl font-light drop-shadow-lg">Finance</div>
+                        <div data-lucide="hand-coins" class="text-white w-icon-fluid h-icon-fluid"></div>
+                        <div class="text-white text-fluid-xl font-light md:font-semibold">Finance</div>
                         <a href="finance.html" class="text-white text-lg underline">See More</a>
                     </div>
                     <div class="md:hidden absolute inset-0 flex items-center justify-center">
-                        <div class="text-white text-4xl font-light">Finance</div>
+                        <div class="text-white text-4xl font-light">Sell Your Car</div>
                     </div>
                 </div>
 
@@ -278,7 +278,7 @@
                 <div class="absolute inset-0 z-20">
                     <div class="hidden md:flex absolute inset-0 flex-col justify-end items-center p-6 space-y-2">
                         <div data-lucide="hand-coins" class="text-white w-icon-fluid h-icon-fluid"></div>
-                        <div class="text-white text-fluid-xl font-semibold">Sell Your Car</div>
+                        <div class="text-white text-fluid-xl  font-light md:font-semibold">Sell Your Car</div>
                         <a href="sellyourcar.html" class="text-white text-lg underline">See More</a>
                     </div>
                     <div class="md:hidden absolute inset-0 flex items-center justify-center">
@@ -303,7 +303,7 @@
                 <div class="absolute inset-0 z-20">
                     <div class="hidden md:flex absolute inset-0 flex-col justify-end items-center p-6 space-y-2">
                         <div data-lucide="wrench" class="text-white w-icon-fluid h-icon-fluid"></div>
-                        <div class="text-white text-fluid-xl font-semibold">Preparation</div>
+                        <div class="text-white text-fluid-xl  font-light md:font-semibold">Preparation</div>
                         <a href="preparation.html" class="text-white text-lg underline">See More</a>
                     </div>
                     <div class="md:hidden absolute inset-0 flex items-center justify-center">
@@ -329,7 +329,7 @@
                 <div class="absolute inset-0 z-20">
                     <div class="hidden md:flex absolute inset-0 flex-col justify-end items-center p-6 space-y-2">
                         <div data-lucide="shield-check" class="text-white w-icon-fluid h-icon-fluid"></div>
-                        <div class="text-white text-fluid-xl font-semibold">Warranty</div>
+                        <div class="text-white text-fluid-xl  font-light md:font-semibold">Warranty</div>
                         <a href="warranty.html" class="text-white text-lg underline">See More</a>
                     </div>
                     <div class="md:hidden absolute inset-0 flex items-center justify-center">
@@ -801,30 +801,38 @@
                 <!-- Left Column -->
                 <div class="space-y-5 text-sm">
                     <div>
-                        <p class="font-semibold">Opening Times</p>
-                        <p>Mon to Sat : 09:00 - 18:00</p>
-                        <p>Sunday : Appointment Only</p>
+                        <p class="text-base">Opening Times</p>
+                        <p class="text-gray-300">Mon to Fri : 08:30 - 18:00</p>
+                        <p class="text-gray-300">Saturday: 9:00 - 17:00</p>
+                        <p class="text-gray-300">Sunday : Appointment Only</p>
                     </div>
                     <div>
-                        <p class="font-semibold">Give us a call</p>
-                        <p>Phone No</p>
+                        <p class="text-base">Give Us A Call</p>
+                        <p class="text-gray-300">07540 177265</p>
                     </div>
                     <div>
-                        <p class="font-semibold">Send us an email</p>
-                        <p>email</p>
+                        <p class="text-base">Send An Email</p>
+                        <p class="text-gray-300">sales@tieroneautomotive.co.uk</p>
                     </div>
                     <div>
-                        <p class="font-semibold">Find us here</p>
-                        <p>Address</p>
+                        <p class="text-base">Find Us Here</p>
+                        <p class="text-gray-300">
+                            The Granary,<br>
+                            Barnes Farm,<br>
+                            Barnes Ln,<br>
+                            Kings Langley,<br>
+                            WD4 9LA
+                        </p>
                     </div>
                 </div>
 
                 <!-- Right Column -->
                 <div class="space-y-2 text-right text-sm">
-                    <p><a href="#" class="hover:text-gold transition">View Stock</a></p>
-                    <p><a href="#" class="hover:text-gold transition">Warranty</a></p>
-                    <p><a href="#" class="hover:text-gold transition">Finance</a></p>
-                    <p><a href="#" class="hover:text-gold transition">Preparation</a></p>
+                    <h3 class="text-base">Quick Links</h3>
+                    <p><a href="#" class="text-gray-300">View Stock</a></p>
+                    <p><a href="#" class="text-gray-300">Warranty</a></p>
+                    <p><a href="#" class="text-gray-300">Finance</a></p>
+                    <p><a href="#" class="text-gray-300">Preparation</a></p>
                 </div>
             </div>
         </div>
@@ -833,12 +841,12 @@
         <div class="hidden md:block md:col-start-4 md:col-span-1">
             <h4 class="font-semibold text-lg mb-3">Useful Links</h4>
             <ul class="space-y-2">
-                <li><a href="#" class="hover:text-gold transition">Privacy Policy</a></li>
-                <li><a href="#" class="hover:text-gold transition">Insurance</a></li>
-                <li><a href="#" class="hover:text-gold transition">Terms & Conditions</a></li>
-                <li><a href="#" class="hover:text-gold transition">Cookies</a></li>
-                <li><a href="#" class="hover:text-gold transition">Complaints</a></li>
-                <li><a href="#" class="hover:text-gold transition">FAQ</a></li>
+                <li><a href="#" class="text-gray-300">Privacy Policy</a></li>
+                <li><a href="#" class="text-gray-300">Insurance</a></li>
+                <li><a href="#" class="text-gray-300">Terms & Conditions</a></li>
+                <li><a href="#" class="text-gray-300">Cookies</a></li>
+                <li><a href="#" class="text-gray-300">Complaints</a></li>
+                <li><a href="#" class="text-gray-300">FAQ</a></li>
             </ul>
         </div>
 
@@ -846,14 +854,13 @@
         <div class="hidden md:block md:col-start-5 md:col-span-1">
             <h4 class="font-semibold text-lg mb-3">Opening Times</h4>
             <ul class="space-y-1 text-sm font-medium">
-                <li class="flex justify-between"><span>Monday</span><span>08:00 - 18:00</span></li>
-                <li class="flex justify-between"><span>Tuesday</span><span>08:00 - 18:00</span></li>
-                <li class="flex justify-between"><span>Wednesday</span><span>08:00 - 18:00</span></li>
-                <li class="flex justify-between"><span>Thursday</span><span>08:00 - 18:00</span></li>
-                <li class="flex justify-between"><span>Friday</span><span>08:00 - 18:00</span></li>
-                <li class="flex justify-between"><span>Saturday</span><span>08:00 - 18:00</span></li>
-                <li class="flex justify-between"><span>Sunday</span><span class="text-neutral-500">Appointment
-                        Only</span></li>
+                <li class="flex justify-between"><span>Monday</span><span class="text-gray-300">08:30 - 18:00</span></li>
+                <li class="flex justify-between"><span>Tuesday</span><span class="text-gray-300">08:30 - 18:00</span></li>
+                <li class="flex justify-between"><span>Wednesday</span><span class="text-gray-300">08:30 - 18:00</span></li>
+                <li class="flex justify-between"><span>Thursday</span><span class="text-gray-300">08:30 - 18:00</span></li>
+                <li class="flex justify-between"><span>Friday</span><span class="text-gray-300">08:30 - 18:00</span></li>
+                <li class="flex justify-between"><span>Saturday</span><span class="text-gray-300">09:00 - 17:00</span></li>
+                <li class="flex justify-between"><span>Sunday</span><span class="text-neutral-500">Closed </span></li>
             </ul>
         </div>
     </div>
@@ -865,14 +872,18 @@
         <script src="https://cdn.jsdelivr.net/npm/lucide@latest"></script>
 
         <div class="flex justify-center gap-4">
-            <a href="https://upload.wikimedia.org/wikipedia/commons/5/51/Facebook_f_logo_%282019%29.svg" class="text-white text-xl">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/5/51/Facebook_f_logo_%282019%29.svg" alt="Facebook" class="w-6 h-6">
+            <a href="https://upload.wikimedia.org/wikipedia/commons/5/51/Facebook_f_logo_%282019%29.svg"
+                class="text-white text-xl">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/5/51/Facebook_f_logo_%282019%29.svg"
+                    alt="Facebook" class="w-6 h-6">
             </a>
             <a href="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png" class="text-white text-xl">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png" alt="Instagram" class="w-6 h-6">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png" alt="Instagram"
+                    class="w-6 h-6">
             </a>
             <a href="https://en.wikipedia.org/wiki/File:X_logo.jpg" class="text-white text-xl">
-                <img src="https://cdn.cms-twdigitalassets.com/content/dam/about-twitter/x/brand-toolkit/logo-black.png.twimg.2560.png" alt="Twitter" class="w-6 h-6 invert">
+                <img src="https://cdn.cms-twdigitalassets.com/content/dam/about-twitter/x/brand-toolkit/logo-black.png.twimg.2560.png"
+                    alt="Twitter" class="w-6 h-6 invert">
             </a>
         </div>
     </div>
