--- a/index.html
+++ b/index.html
@@ -39,10 +39,11 @@
         </video>
 
         <!-- Navbar -->
-        <nav class="h-24 w-full absolute top-0 left-0 bg-black/40 backdrop-blur-md border-b border-white/10 shadow-lg">
+        <nav
+            class="fixed top-0 left-0 w-full h-24 bg-black/40 backdrop-blur-md border-b border-white/10 shadow-lg z-40">
             <div class="max-w-screen-xl mx-auto h-full flex items-center justify-between px-4 sm:px-8 relative">
                 <!-- Left Icons -->
-                <div class="flex items-center gap-4">
+                <div class="hidden sm:flex items-center gap-4">
                     <a href="contactus.html" aria-label="Call">
                         <button class="p-2 rounded-full hover:bg-white/10 transition-colors">
                             <i data-lucide="phone" class="w-5 h-5 text-white"></i>
@@ -60,7 +61,7 @@
                     <!-- Search Toggle -->
                     <div id="search-container" class="relative flex items-center">
                         <!-- Search Icon Button -->
-                        <button id="toggle-search" class="p-2 rounded-full hover:bg-white/10 transition-colors"
+                        <button id="toggle-search" class="hidden sm:block p-2 rounded-full hover:bg-white/10 transition-colors"
                             aria-label="Search">
                             <i data-lucide="search" class="w-5 h-5 text-white"></i>
                         </button>
@@ -99,8 +100,8 @@
                             </button>
                         </div>
                     </div>
-                    <button class="p-2 rounded-full hover:bg-white/10 transition-colors" aria-label="Filter">
-                        <i data-lucide="menu" class="w-5 h-5 text-white"></i>
+                    <button class="p-3 sm:p-2.5 rounded-full hover:bg-white/10 transition-colors" aria-label="Filter">
+                        <i data-lucide="menu" class="w-6 h-6 sm:w-5 sm:h-5 text-white"></i>
                     </button>
                 </div>
 
@@ -115,17 +116,16 @@
         </nav>
 
         <!-- Overlay -->
-        <div id="menu-overlay" class="fixed inset-0 bg-black/70 z-90 hidden"></div>
+        <div id="menu-overlay" class="fixed inset-0 bg-black/70 z-50 hidden"></div>
 
-        <!-- Slide-in Menu -->
         <div id="side-menu"
-            class="fixed top-0 right-0 h-full w-96 bg-[#0f1012] text-white z-50 transform translate-x-full transition-transform duration-300 ease-in-out shadow-lg">
-            <div class="flex items-center justify-between px-6 h-24 border-b border-white/10">
-                <img src="Images/T1White.png" alt="Tier One Logo" class="h-16 object-contain" />
-                <button id="close-menu" class="text-white" aria-label="Close">
-                    <i data-lucide="x" class="w-6 h-6"></i>
-                </button>
-            </div>
+        class="fixed top-0 right-0 h-full w-full sm:w-96 bg-[#0f1012] text-white z-50 transform translate-x-full transition-transform duration-300 ease-in-out shadow-lg">
+        <div class="flex items-center justify-between px-6 h-24 border-b border-white/10">
+            <img src="Images/T1White.png" alt="Tier One Logo" class="h-16 object-contain" />
+            <button id="close-menu" class="text-white" aria-label="Close">
+                <i data-lucide="x" class="w-6 h-6"></i>
+            </button>
+        </div>
             <ul class="pl-3 pt-4 tracking-wide uppercase text-lg tracking-[0.15rem]">
                 <li><a href="index.html"
                         class="block px-3 py-2 rounded transition duration-200 transform hover:translate-x-2 hover:bg-[#1a1b1e] hover:text-gold">Home</a>
@@ -854,12 +854,18 @@
         <div class="hidden md:block md:col-start-5 md:col-span-1">
             <h4 class="font-semibold text-lg mb-3">Opening Times</h4>
             <ul class="space-y-1 text-sm font-medium">
-                <li class="flex justify-between"><span>Monday</span><span class="text-gray-300">08:30 - 18:00</span></li>
-                <li class="flex justify-between"><span>Tuesday</span><span class="text-gray-300">08:30 - 18:00</span></li>
-                <li class="flex justify-between"><span>Wednesday</span><span class="text-gray-300">08:30 - 18:00</span></li>
-                <li class="flex justify-between"><span>Thursday</span><span class="text-gray-300">08:30 - 18:00</span></li>
-                <li class="flex justify-between"><span>Friday</span><span class="text-gray-300">08:30 - 18:00</span></li>
-                <li class="flex justify-between"><span>Saturday</span><span class="text-gray-300">09:00 - 17:00</span></li>
+                <li class="flex justify-between"><span>Monday</span><span class="text-gray-300">08:30 - 18:00</span>
+                </li>
+                <li class="flex justify-between"><span>Tuesday</span><span class="text-gray-300">08:30 - 18:00</span>
+                </li>
+                <li class="flex justify-between"><span>Wednesday</span><span class="text-gray-300">08:30 - 18:00</span>
+                </li>
+                <li class="flex justify-between"><span>Thursday</span><span class="text-gray-300">08:30 - 18:00</span>
+                </li>
+                <li class="flex justify-between"><span>Friday</span><span class="text-gray-300">08:30 - 18:00</span>
+                </li>
+                <li class="flex justify-between"><span>Saturday</span><span class="text-gray-300">09:00 - 17:00</span>
+                </li>
                 <li class="flex justify-between"><span>Sunday</span><span class="text-neutral-500">Closed </span></li>
             </ul>
         </div>
