--- a/index.html
+++ b/index.html
@@ -38,132 +38,7 @@
             <source src="Video/McLaren2.mp4" type="video/mp4" />
         </video>
 
-        <!-- Navbar -->
-        <nav
-            class="fixed top-0 left-0 w-full h-24 bg-black/40 backdrop-blur-md border-b border-white/10 shadow-lg z-40">
-            <div class="max-w-screen-xl mx-auto h-full flex items-center justify-between px-4 sm:px-8 relative">
-                <!-- Left Icons -->
-                <div class="hidden sm:flex items-center gap-4">
-                    <a href="contactus.html" aria-label="Call">
-                        <button class="p-2 rounded-full hover:bg-white/10 transition-colors">
-                            <i data-lucide="phone" class="w-5 h-5 text-white"></i>
-                        </button>
-                    </a>
-                    <a href="contactus.html" aria-label="Email">
-                        <button class="p-2 rounded-full hover:bg-white/10 transition-colors">
-                            <i data-lucide="mail" class="w-5 h-5 text-white"></i>
-                        </button>
-                    </a>
-                </div>
-
-                <!-- Right Icons -->
-                <div class="flex items-center gap-2">
-                    <!-- Search Toggle -->
-                    <div id="search-container" class="relative flex items-center">
-                        <!-- Search Icon Button -->
-                        <button id="toggle-search" class="hidden sm:block p-2 rounded-full hover:bg-white/10 transition-colors"
-                            aria-label="Search">
-                            <i data-lucide="search" class="w-5 h-5 text-white"></i>
-                        </button>
-
-                        <!-- Expanding Form -->
-                        <div id="search-box"
-                            class="absolute right-0 top-1/2 -translate-y-1/2 bg-[#2A2E35] text-white rounded-full overflow-hidden px-4 py-2 flex items-center gap-1 large-shadow transform scale-x-0 opacity-0 transition-all duration-300 origin-right z-50">
-
-                            <!-- Make Dropdown -->
-                            <div class="relative">
-                                <select
-                                    class="bg-transparent text-white appearance-none pr-6 pl-1 py-1 rounded focus:outline-none">
-                                    <option class="bg-[#2A2E35]">Make</option>
-                                    <option class="bg-[#2A2E35]">Audi</option>
-                                    <option class="bg-[#2A2E35]">BMW</option>
-                                </select>
-                                <i data-lucide="chevron-down"
-                                    class="pointer-events-none absolute right-0 top-1/2 -translate-y-1/2 w-4 h-4 text-white"></i>
-                            </div>
-
-                            <!-- Model Dropdown -->
-                            <div class="relative">
-                                <select
-                                    class="bg-[transparent] text-white appearance-none pr-6 pl-3 py-1 rounded focus:outline-none">
-                                    <option class="bg-[#2A2E35]">Model</option>
-                                    <option class="bg-[#2A2E35]">M3</option>
-                                    <option class="bg-[#2A2E35]">RS5</option>
-                                </select>
-                                <i data-lucide="chevron-down"
-                                    class="pointer-events-none absolute right-0 top-1/2 -translate-y-1/2 w-4 h-4 text-white "></i>
-                            </div>
-
-                            <!-- Search Button -->
-                            <button class="text-white pl-3">
-                                <i data-lucide="search" class="w-5 h-5"></i>
-                            </button>
-                        </div>
-                    </div>
-                    <button class="p-3 sm:p-2.5 rounded-full hover:bg-white/10 transition-colors" aria-label="Filter">
-                        <i data-lucide="menu" class="w-6 h-6 sm:w-5 sm:h-5 text-white"></i>
-                    </button>
-                </div>
-
-                <!-- Center Logo -->
-                <div class="absolute left-1/2 top-1/2 transform -translate-x-1/2 -translate-y-1/2">
-                    <a href="index.html" aria-label="Home">
-                        <img src="Images/T1White.png" alt="TierOne Logo"
-                            class="h-16 sm:h-20 object-contain hover:opacity-90 transition-opacity duration-200" />
-                    </a>
-                </div>
-            </div>
-        </nav>
-
-        <!-- Overlay -->
-        <div id="menu-overlay" class="fixed inset-0 bg-black/70 z-50 hidden"></div>
-
-        <div id="side-menu"
-        class="fixed top-0 right-0 h-full w-full sm:w-96 bg-[#0f1012] text-white z-50 transform translate-x-full transition-transform duration-300 ease-in-out shadow-lg">
-        <div class="flex items-center justify-between px-6 h-24 border-b border-white/10">
-            <img src="Images/T1White.png" alt="Tier One Logo" class="h-16 object-contain" />
-            <button id="close-menu" class="text-white" aria-label="Close">
-                <i data-lucide="x" class="w-6 h-6"></i>
-            </button>
-        </div>
-            <ul class="pl-3 pt-4 tracking-wide uppercase text-lg tracking-[0.15rem]">
-                <li><a href="index.html"
-                        class="block px-3 py-2 rounded transition duration-200 transform hover:translate-x-2 hover:bg-[#1a1b1e] hover:text-gold">Home</a>
-                </li>
-                <li><a href="stock.html"
-                        class="block px-3 py-2 rounded transition duration-200 transform hover:translate-x-2 hover:bg-[#1a1b1e] hover:text-gold">View
-                        Stock</a></li>
-                <li><a href="sellyourcar.html"
-                        class="block px-3 py-2 rounded transition duration-200 transform hover:translate-x-2 hover:bg-[#1a1b1e] hover:text-gold">Sell
-                        My Car</a></li>
-                <li><a href="preparation.html"
-                        class="block px-3 py-2 rounded transition duration-200 transform hover:translate-x-2 hover:bg-[#1a1b1e] hover:text-gold">Preparation</a>
-                </li>
-                <li><a href="finance.html"
-                        class="block px-3 py-2 rounded transition duration-200 transform hover:translate-x-2 hover:bg-[#1a1b1e] hover:text-gold">Finance</a>
-                </li>
-                <li><a href="warranty.html"
-                        class="block px-3 py-2 rounded transition duration-200 transform hover:translate-x-2 hover:bg-[#1a1b1e] hover:text-gold">Warranty</a>
-                </li>
-                <li><a href="previouslysold.html"
-                        class="block px-3 py-2 rounded transition duration-200 transform hover:translate-x-2 hover:bg-[#1a1b1e] hover:text-gold">Previously
-                        Sold</a></li>
-                <li><a href="sourcing.html"
-                        class="block px-3 py-2 rounded transition duration-200 transform hover:translate-x-2 hover:bg-[#1a1b1e] hover:text-gold">Vehicle
-                        Sourcing</a></li>
-            </ul>
-
-            <div class="absolute bottom-6 left-0 w-full px-6 border-t border-white/10 pt-6 flex gap-4 justify-start">
-                <a href="https://instagram.com" target="_blank">
-                    <img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png" alt="Instagram"
-                        class="w-7 h-7 rounded-md">
-                </a>
-                <a href="https://facebook.com" target="_blank">
-                    <img src="https://upload.wikimedia.org/wikipedia/commons/5/51/Facebook_f_logo_%282019%29.svg"
-                        alt="Facebook" class="w-7 h-7">
-                </a>
-            </div>
-        </div>
+        <div include-html="navbar.html"></div>
 
         <!-- CTA SEARCH & ACTIONS BLOCK -->
         <div class="absolute top-[78%] left-1/2 transform -translate-x-1/2 -translate-y-1/2 z-40 w-full px-4">
@@ -773,146 +648,7 @@
             </div>
         </div>
 </body>
-<footer class="bg-[#16181c] text-[#333] text-sm pt-8 sm:pt-16 pb-8 text-white">
-    <div class="max-w-screen-xl mx-auto px-6 grid grid-cols-1 md:grid-cols-5 gap-10 mb-10">
 
-        <!-- Logo and Social -->
-        <div class="space-y-4 col-span-1">
-            <img src="Images/T1White.png" alt="Tier One Logo" class="h-24 md:h-20 mx-auto md:mx-0">
-            <div class="hidden md:block space-y-3 text-sm">
-                <a href="https://facebook.com" target="_blank"
-                    class="flex items-center gap-2 hover:opacity-80 transition">
-                    <img src="https://upload.wikimedia.org/wikipedia/commons/5/51/Facebook_f_logo_%282019%29.svg"
-                        class="w-5 h-5" />
-                    <span>Facebook</span>
-                </a>
-                <a href="https://instagram.com" target="_blank"
-                    class="flex items-center gap-2 hover:opacity-80 transition">
-                    <img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png"
-                        class="w-5 h-5 rounded-md" />
-                    <span>Instagram</span>
-                </a>
-            </div>
-        </div>
-
-        <!-- Mobile: Contact Info + Links -->
-        <div class="md:hidden col-span-1">
-            <div class="flex justify-between gap-10">
-                <!-- Left Column -->
-                <div class="space-y-5 text-sm">
-                    <div>
-                        <p class="text-base">Opening Times</p>
-                        <p class="text-gray-300">Mon to Fri : 08:30 - 18:00</p>
-                        <p class="text-gray-300">Saturday: 9:00 - 17:00</p>
-                        <p class="text-gray-300">Sunday : Appointment Only</p>
-                    </div>
-                    <div>
-                        <p class="text-base">Give Us A Call</p>
-                        <p class="text-gray-300">07540 177265</p>
-                    </div>
-                    <div>
-                        <p class="text-base">Send An Email</p>
-                        <p class="text-gray-300">sales@tieroneautomotive.co.uk</p>
-                    </div>
-                    <div>
-                        <p class="text-base">Find Us Here</p>
-                        <p class="text-gray-300">
-                            The Granary,<br>
-                            Barnes Farm,<br>
-                            Barnes Ln,<br>
-                            Kings Langley,<br>
-                            WD4 9LA
-                        </p>
-                    </div>
-                </div>
-
-                <!-- Right Column -->
-                <div class="space-y-2 text-right text-sm">
-                    <h3 class="text-base">Quick Links</h3>
-                    <p><a href="#" class="text-gray-300">View Stock</a></p>
-                    <p><a href="#" class="text-gray-300">Warranty</a></p>
-                    <p><a href="#" class="text-gray-300">Finance</a></p>
-                    <p><a href="#" class="text-gray-300">Preparation</a></p>
-                </div>
-            </div>
-        </div>
-
-        <!-- Useful Links: now start in column 4 -->
-        <div class="hidden md:block md:col-start-4 md:col-span-1">
-            <h4 class="font-semibold text-lg mb-3">Useful Links</h4>
-            <ul class="space-y-2">
-                <li><a href="#" class="text-gray-300">Privacy Policy</a></li>
-                <li><a href="#" class="text-gray-300">Insurance</a></li>
-                <li><a href="#" class="text-gray-300">Terms & Conditions</a></li>
-                <li><a href="#" class="text-gray-300">Cookies</a></li>
-                <li><a href="#" class="text-gray-300">Complaints</a></li>
-                <li><a href="#" class="text-gray-300">FAQ</a></li>
-            </ul>
-        </div>
-
-        <!-- Opening Times: now column 5 -->
-        <div class="hidden md:block md:col-start-5 md:col-span-1">
-            <h4 class="font-semibold text-lg mb-3">Opening Times</h4>
-            <ul class="space-y-1 text-sm font-medium">
-                <li class="flex justify-between"><span>Monday</span><span class="text-gray-300">08:30 - 18:00</span>
-                </li>
-                <li class="flex justify-between"><span>Tuesday</span><span class="text-gray-300">08:30 - 18:00</span>
-                </li>
-                <li class="flex justify-between"><span>Wednesday</span><span class="text-gray-300">08:30 - 18:00</span>
-                </li>
-                <li class="flex justify-between"><span>Thursday</span><span class="text-gray-300">08:30 - 18:00</span>
-                </li>
-                <li class="flex justify-between"><span>Friday</span><span class="text-gray-300">08:30 - 18:00</span>
-                </li>
-                <li class="flex justify-between"><span>Saturday</span><span class="text-gray-300">09:00 - 17:00</span>
-                </li>
-                <li class="flex justify-between"><span>Sunday</span><span class="text-neutral-500">Closed </span></li>
-            </ul>
-        </div>
-    </div>
-
-    <!-- Mobile Social Icons -->
-    <div class="md:hidden text-center space-y-3 mt-4">
-        <p class="text-white">Follow Us</p>
-        <!-- Include Lucide via CDN -->
-        <script src="https://cdn.jsdelivr.net/npm/lucide@latest"></script>
-
-        <div class="flex justify-center gap-4">
-            <a href="https://upload.wikimedia.org/wikipedia/commons/5/51/Facebook_f_logo_%282019%29.svg"
-                class="text-white text-xl">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/5/51/Facebook_f_logo_%282019%29.svg"
-                    alt="Facebook" class="w-6 h-6">
-            </a>
-            <a href="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png" class="text-white text-xl">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png" alt="Instagram"
-                    class="w-6 h-6">
-            </a>
-            <a href="https://en.wikipedia.org/wiki/File:X_logo.jpg" class="text-white text-xl">
-                <img src="https://cdn.cms-twdigitalassets.com/content/dam/about-twitter/x/brand-toolkit/logo-black.png.twimg.2560.png"
-                    alt="Twitter" class="w-6 h-6 invert">
-            </a>
-        </div>
-    </div>
-
-    <!-- Legal -->
-    <div class="border-t border-neutral-300 pt-6 mt-8">
-        <div
-            class="max-w-screen-xl mx-auto px-6 flex flex-col sm:flex-row justify-between text-xs text-neutral-500 gap-4">
-            <div class="space-y-1">
-                <p>Tier One Automotive Ltd is a company registered in England and Wales.</p>
-                <p>Company registration number: 08879100</p>
-                <p>
-                    <a href="#" class="underline hover:text-[#b59f61] transition">Cookies</a> |
-                    <a href="#" class="underline hover:text-[#b59f61] transition">Privacy Policy</a>
-                </p>
-            </div>
-            <div class="text-sm font-medium">
-                © 2025 Designed & Powered by
-                <a href="https://alexlovelock.dev" class="underline hover:text-[#b59f61] transition">Alex Lovelock</a>
-            </div>
-        </div>
-    </div>
-</footer>
 
 <!-- Embla Script -->
 <script src="https://cdn.jsdelivr.net/npm/embla-carousel@8/embla-carousel.umd.js"></script>
@@ -928,7 +664,8 @@
         embla.scrollNext();
     }, 4000);
 </script>
-
+<script src="includes.js"></script>
 <script>
     lucide.createIcons();
 </script>
+<div include-html="footer.html"></div>
