feat: finance responsive

--- a/footer.html
+++ b/footer.html
@@ -133,7 +133,7 @@
             </div>
             <div class="text-sm font-medium">
                 © 2025 Designed & Powered by
-                <a href="https://alexlovelock.dev" class="underline hover:text-[#b59f61] transition">Alex Lovelock</a>
+                <a href="https://alexlovelock22.github.io" class="underline hover:text-[#b59f61] transition">Alex Lovelock</a>
             </div>
         </div>
     </div>
