--- a/finance.html
+++ b/finance.html
@@ -22,46 +22,51 @@
 
 <body class="bg-[#202329] text-white exo2">
 
-  
 
-  <!-- Hero Section -->
-  <section class="relative w-full h-screen overflow-hidden -mt-24">
+
+  <section class="relative w-full overflow-hidden -mt-24">
     <!-- Background Image -->
-    <div class="absolute inset-0 z-0">
+    <div class="absolute inset-0 z-0 h-[65vh] sm:h-full">
+
       <img
         src="https://wallpapercat.com/w/full/0/2/b/1709811-3000x1395-desktop-dual-screen-ferrari-812-superfast-wallpaper.jpg"
-        alt="Hero Image" class="w-full h-full object-cover" />
-    </div>
-    <div include-html="navbar.html"></div>
-    <!-- Dark overlay -->
-    <div
-      class="absolute inset-0 z-10 bg-[linear-gradient(to_bottom,rgba(0,0,0,0.85)_0%,rgba(0,0,0,0.6)_70%,rgba(0,0,0,0.2)_80%,transparent_100%)]">
+        alt="Hero Image" class="w-full h-full object-cover object-[center_50%] sm:object-center" />
     </div>
 
-    <!-- Centered Text -->
-    <div class="relative z-20 flex items-center justify-center h-full px-4 text-center z-10">
-      <div class="max-w-[1200px]">
-        <h1 class="text-3xl md:text-5xl font-light tracking-[0.3em] text-white mb-6">ELEV8 FINANCE</h1>
-        <p class="text-md md:text-xl leading-relaxed text-white mb-4">
+    <!-- Navbar Include -->
+    <div include-html="navbar.html"></div>
+
+    <!-- Overlay -->
+    <div
+      class="absolute inset-0 z-10 h-[55vh] sm:h-screen bg-[linear-gradient(to_bottom,rgba(0,0,0,0.9)_0%,rgba(0,0,0,0.7)_70%,rgba(0,0,0,0.3)_80%,transparent_100%)] backdrop-blur-sm sm:backdrop-blur-none">
+    </div>
+
+    <!-- Text Content -->
+    <div class="relative z-20 h-[65vh] sm:h-screen px-4">
+      <div
+        class="max-w-[1200px] mx-auto flex flex-col justify-center sm:justify-center h-full text-center pt-40 sm:pt-0">
+        <h1 class="text-2xl md:text-5xl font-light tracking-[0.3em] text-white mb-6">ELEV8 FINANCE</h1>
+        <p class="text-sm md:text-xl leading-relaxed text-white mb-4">
           We understand that every customer has unique requirements when it comes to vehicle finance. That’s
-          why we offer
-          competitive rates and flexible packages tailored to your needs — from standard Hire Purchase (HP) to
-          Personal Contract Purchase (PCP).
+          why we offer competitive rates and flexible packages tailored to your needs — from standard Hire
+          Purchase (HP) to Personal Contract Purchase (PCP).
         </p>
-        <p class="text-md md:text-xl leading-relaxed text-white">
+        <p class="text-sm md:text-xl leading-relaxed text-white">
           Tier One Automotive proudly partners with Elev8 Finance, one of the UK’s leading automotive finance
-          specialists.
-          With access to exclusive lenders, they provide a seamless, expert service to help you finance your
-          next prestige
-          vehicle.
+          specialists. With access to exclusive lenders, they provide a seamless, expert service to help you
+          finance your next prestige vehicle.
         </p>
       </div>
     </div>
+  </section>
+
+
+
 
 
   </section>
   <!-- Tab Section (Floating over Hero bottom) -->
-  <section class="relative z-30 -mt-52">
+  <section class="relative z-30 -mt-52 hidden sm:block">
     <div class="py-12">
       <!-- Background-limited wrapper -->
       <div class="max-w-screen-2xl mx-auto p-4 bg-dark-blue">
@@ -285,91 +290,173 @@
     </div>
   </section>
 
-  <section class="bg-dark-blue-light text-white py-28 px-6">
-    <!-- Outer full-width background -->
-    <div class="bg-dark-blue max-w max-w-screen-2xl mx-auto px-6 py-12">
+  <!-- Accordion container -->
+  <div class="md:hidden p-4 space-y-4 bg-dark-blue-light text-white" id="mobile-accordion">
+
+    <!-- Accordion Item -->
+    <div class="border border-white/10 rounded">
+      <button
+        class="w-full flex justify-between items-center px-4 py-3 font-semibold tracking-wide uppercase text-left accordion-btn bg-dark-blue">
+        Hire Purchase (HP)
+        <svg class="w-4 h-4 transition-transform" fill="none" stroke="currentColor" stroke-width="2"
+          viewBox="0 0 24 24">
+          <path d="M6 9l6 6 6-6"></path>
+        </svg>
+      </button>
+      <div class="accordion-content max-h-0 overflow-hidden transition-all duration-300 px-4 text-sm text-gray-300">
+        <h3 class="font-bold mt-3 mb-1 text-white">Overview</h3>
+        <p>The most simple and straight-forward agreement is 'hire purchase' where you make fixed monthly payments until
+          the car is yours.</p>
+        <h3 class="font-bold mt-4 mb-1">Benefits</h3>
+        <ul class="list-disc list-inside space-y-1 mb-3">
+          <li>Flexible deposits</li>
+          <li>1 to 5 year terms</li>
+          <li>No balloon payment</li>
+          <li>Early settlement</li>
+          <li>No mileage restrictions</li>
+        </ul>
+      </div>
+    </div>
+
+    <!-- Repeat for other finance types -->
+    <!-- Use same structure: button.accordion-btn + div.accordion-content -->
+    <!-- Lease Purchase -->
+    <div class="border border-white/10 rounded">
+      <button
+        class="w-full flex justify-between items-center px-4 py-3 font-semibold tracking-wide uppercase text-left accordion-btn bg-dark-blue">
+        Lease Purchase (LP)
+        <svg class="w-4 h-4 transition-transform" fill="none" stroke="currentColor" stroke-width="2"
+          viewBox="0 0 24 24">
+          <path d="M6 9l6 6 6-6"></path>
+        </svg>
+      </button>
+      <div class="accordion-content max-h-0 overflow-hidden transition-all duration-300 px-4 text-sm text-gray-300">
+        <h3 class="font-bold mt-3 mb-1 text-white">Overview</h3>
+        <p>Great for high-value cars. Similar to HP but with a balloon payment at the end for lower monthly payments.
+        </p>
+        <h3 class="font-bold mt-4 mb-1">Benefits</h3>
+        <ul class="list-disc list-inside space-y-1 mb-3">
+          <li>Lower monthly payments</li>
+          <li>No mileage limits</li>
+          <li>Easy to settle early</li>
+        </ul>
+      </div>
+    </div>
+
+    <!-- PCP -->
+    <div class="border border-white/10 rounded">
+      <button
+        class="w-full flex justify-between items-center px-4 py-3 font-semibold tracking-wide uppercase text-left accordion-btn bg-dark-blue">
+        Personal Contract Purchase (PCP)
+        <svg class="w-4 h-4 transition-transform" fill="none" stroke="currentColor" stroke-width="2"
+          viewBox="0 0 24 24">
+          <path d="M6 9l6 6 6-6"></path>
+        </svg>
+      </button>
+      <div class="accordion-content max-h-0 overflow-hidden transition-all duration-300 px-4 text-sm text-gray-300">
+        <h3 class="font-bold mt-3 mb-1 text-white">Overview</h3>
+        <p>Lower monthly payments with a final balloon. Return, keep, or trade in at the end.</p>
+        <h3 class="font-bold mt-4 mb-1">Benefits</h3>
+        <ul class="list-disc list-inside space-y-1 mb-3">
+          <li>Low monthly payments</li>
+          <li>Flexible options at end</li>
+          <li>Return without obligation</li>
+        </ul>
+      </div>
+    </div>
+
+    <!-- Equity Release -->
+    <div class="border border-white/10 rounded">
+      <button
+        class="w-full flex justify-between items-center px-4 py-3 font-semibold tracking-wide uppercase text-left accordion-btn bg-dark-blue">
+        Equity Release
+        <svg class="w-4 h-4 transition-transform" fill="none" stroke="currentColor" stroke-width="2"
+          viewBox="0 0 24 24">
+          <path d="M6 9l6 6 6-6"></path>
+        </svg>
+      </button>
+      <div class="accordion-content max-h-0 overflow-hidden transition-all duration-300 px-4 text-sm text-gray-300">
+        <h3 class="font-bold mt-3 mb-1 text-white">Overview</h3>
+        <p>Use your existing car to raise capital. We buy and re-sell it to you with tailored finance.</p>
+        <h3 class="font-bold mt-4 mb-1">Benefits</h3>
+        <ul class="list-disc list-inside space-y-1 mb-3">
+          <li>Quick cash release</li>
+          <li>Straightforward process</li>
+          <li>Better than personal loans</li>
+        </ul>
+      </div>
+    </div>
+  </div>
+
+
+  <!-- Existing Desktop Tabs -->
+  <div class="hidden md:block">
+    <!-- Keep your entire tab system exactly as you have it (tab buttons, tab content with IDs, JavaScript logic) -->
+  </div>
+
+
+  <section class="bg-dark-blue-light text-white py-6 sm:py-28 px-4 sm:px-6">
+    <div class="bg-dark-blue max-w-screen-2xl mx-auto px-4 py-10 sm:px-6 sm:py-12">
       <!-- Title -->
-      <h2 class="text-center text-3xl tracking-[0.25em] font-light uppercase mb-8 relative">
+      <h2 class="text-center text-2xl sm:text-3xl tracking-[0.25em] font-light uppercase mb-8 relative">
         Request a Finance Quote
         <div class="mx-auto w-16 h-px bg-gray-400 mt-2"></div>
       </h2>
-
+  
       <!-- Form -->
-      <form class="max-w-4xl mx-auto space-y-8">
-        <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
-          <div>
-            <label class="block text-sm mb-1 font-light ">First Name</label>
-            <input type="text"
-              class="w-full px-4 py-2 bg-[#1f2937] border border-[#383e4a] rounded-md focus:outline-none focus:ring focus:ring-[#B3A177] shadow-inner" />
+      <form class="max-w-4xl mx-auto space-y-4 sm:space-y-8">
+        <!-- Name, Email, Tel, Message -->
+        <div class="grid grid-cols-1 sm:grid-cols-2 gap-4 sm:gap-6">
+          <input type="text" placeholder="First Name"
+            class="w-full px-4 py-2 sm:py-3 bg-[#1f2937] border border-[#383e4a] rounded-md focus:outline-none focus:ring focus:ring-[#B3A177] shadow-inner" />
+          <input type="text" placeholder="Last Name"
+            class="w-full px-4 py-2 sm:py-3 bg-[#1f2937] border border-[#383e4a] rounded-md focus:outline-none focus:ring focus:ring-[#B3A177]" />
+          <input type="email" placeholder="Email"
+            class="w-full px-4 py-2 sm:py-3 bg-[#1f2937] border border-[#383e4a] rounded-md focus:outline-none focus:ring focus:ring-[#B3A177]" />
+          <input type="tel" placeholder="Telephone"
+            class="w-full px-4 py-2 sm:py-3 bg-[#1f2937] border border-[#383e4a] rounded-md focus:outline-none focus:ring focus:ring-[#B3A177]" />
+          
+          <!-- Message field now included here to benefit from consistent spacing -->
+          <textarea placeholder="Message" rows="4"
+            class="sm:col-span-2 w-full px-4 pt-2 pb-2 sm:py-3 resize-none bg-[#1f2937] border border-[#383e4a] rounded-md focus:outline-none focus:ring focus:ring-[#B3A177]"></textarea>
+        </div>
+  
+        <!-- Finance Inputs -->
+        <div class="grid grid-cols-1 sm:grid-cols-2 gap-4 sm:gap-6">
+          <div class="relative">
+            <span class="absolute left-3 top-1/2 transform -translate-y-1/2 text-gray-400">£</span>
+            <input type="number" placeholder="Deposit"
+              class="w-full pl-7 pr-4 py-2 sm:py-3 bg-[#1f2937] border border-[#383e4a] rounded-md focus:outline-none focus:ring focus:ring-[#B3A177]" />
           </div>
-          <div>
-            <label class="block text-sm mb-1 font-light ">Last Name</label>
-            <input type="text"
-              class="w-full px-4 py-2 bg-[#1f2937] border border-[#383e4a] rounded-md focus:outline-none focus:ring focus:ring-[#B3A177]" />
-          </div>
-          <div>
-            <label class="block text-sm mb-1 font-light ">Email</label>
-            <input type="email"
-              class="w-full px-4 py-2 bg-[#1f2937] border border-[#383e4a] rounded-md focus:outline-none focus:ring focus:ring-[#B3A177]" />
-          </div>
-          <div>
-            <label class="block text-sm mb-1 font-semibold ">Telephone</label>
-            <input type="tel"
-              class="w-full px-4 py-2 bg-[#1f2937] border border-[#383e4a] rounded-md focus:outline-none focus:ring focus:ring-[#B3A177]" />
+          <select
+            class="w-full px-4 py-2 sm:py-3 bg-[#1f2937] border border-[#383e4a] rounded-md focus:outline-none focus:ring focus:ring-[#B3A177]">
+            <option disabled selected>Preferred Term</option>
+            <option>1 Year</option>
+            <option>2 Years</option>
+            <option>3 Years</option>
+            <option>4 Years</option>
+            <option>5 Years</option>
+          </select>
+          <input type="number" placeholder="Annual Mileage *"
+            class="w-full px-4 py-2 sm:py-3 bg-[#1f2937] border border-[#383e4a] rounded-md focus:outline-none focus:ring focus:ring-[#B3A177]" />
+          <div class="relative">
+            <span class="absolute left-3 top-1/2 transform -translate-y-1/2 text-gray-400">£</span>
+            <input type="number" placeholder="Desired Monthly Payment"
+              class="w-full pl-7 pr-4 py-2 sm:py-3 bg-[#1f2937] border border-[#383e4a] rounded-md focus:outline-none focus:ring focus:ring-[#B3A177]" />
           </div>
         </div>
-
-        <div>
-          <label class="block text-sm mb-1 font-light ">Message</label>
-          <textarea rows="4"
-            class="w-full px-4 py-2 bg-[#1f2937] border border-[#383e4a] rounded-md focus:outline-none focus:ring focus:ring-[#B3A177]"></textarea>
-        </div>
-
-        <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
-          <div>
-            <label class="block text-sm mb-1 font-light ">Deposit</label>
-            <div class="relative">
-              <span class="absolute left-3 top-1/2 transform -translate-y-1/2 text-gray-400">£</span>
-              <input type="number"
-                class="w-full pl-7 pr-4 py-2 bg-[#1f2937] border border-[#383e4a] rounded-md focus:outline-none focus:ring focus:ring-[#B3A177]" />
-            </div>
-          </div>
-          <div>
-            <label class="block text-sm mb-1 font-light">Preferred Term</label>
-            <select
-              class="w-full px-4 py-2 bg-[#1f2937] border border-[#383e4a] rounded-md focus:outline-none focus:ring focus:ring-[#B3A177]">
-              <option>1 Year</option>
-              <option>2 Years</option>
-              <option>3 Years</option>
-              <option>4 Years</option>
-              <option>5 Years</option>
-            </select>
-          </div>
-          <div>
-            <label class="block text-sm mb-1 font-light ">Annual Mileage *</label>
-            <input type="number"
-              class="w-full px-4 py-2 bg-[#1f2937] border border-[#383e4a] rounded-md focus:outline-none focus:ring focus:ring-[#B3A177]" />
-          </div>
-          <div>
-            <label class="block text-sm mb-1 font-light ">Desired Monthly Payment</label>
-            <div class="relative">
-              <span class="absolute left-3 top-1/2 transform -translate-y-1/2 text-gray-400">£</span>
-              <input type="number"
-                class="w-full pl-7 pr-4 py-2 bg-[#1f2937] border border-[#383e4a] rounded-md focus:outline-none focus:ring focus:ring-[#B3A177]" />
-            </div>
-          </div>
-        </div>
-
+  
         <!-- Submit -->
-        <div>
+        <div class="text-center">
           <button type="submit"
-            class="bg-white text-black font-semibold uppercase tracking-widest px-8 py-3 mt-6 hover:bg-gray-200 transition">
+            class="bg-white text-black font-semibold uppercase tracking-widest px-8 py-3 mt-4 hover:bg-gray-200 transition">
             Send
           </button>
         </div>
       </form>
     </div>
   </section>
+  
 
   <section class="bg-dark-blue-light text-white pt-8 pb-40 px-6">
     <div class="max-w-6xl mx-auto text-center">
@@ -463,12 +550,7 @@
       </div>
     </div>
   </section>
-
-
 </body>
-
-
-
 
 <script>
   function showFinanceTab(tabId) {
@@ -486,6 +568,37 @@
 
   lucide.createIcons();
 </script>
+
 <script src="includes.js"></script>
 <div include-html="footer.html"></div>
+
+
+<script>
+  document.addEventListener("DOMContentLoaded", () => {
+    const items = document.querySelectorAll('.accordion-btn');
+    items.forEach((btn) => {
+      btn.addEventListener('click', () => {
+        const content = btn.nextElementSibling;
+        const icon = btn.querySelector('svg');
+        const expanded = content.classList.contains('max-h-96');
+
+        // Close all first
+        document.querySelectorAll('.accordion-content').forEach(c => {
+          c.classList.remove('max-h-96');
+          c.classList.add('max-h-0');
+        });
+        document.querySelectorAll('.accordion-btn svg').forEach(i => {
+          i.classList.remove('rotate-180');
+        });
+
+        // Open current
+        if (!expanded) {
+          content.classList.remove('max-h-0');
+          content.classList.add('max-h-96');
+          icon.classList.add('rotate-180');
+        }
+      });
+    });
+  });</script>
+
 </html>
