feat: responsive sellyourcar

--- a/finance.html
+++ b/finance.html
@@ -402,7 +402,7 @@
         Request a Finance Quote
         <div class="mx-auto w-16 h-px bg-gray-400 mt-2"></div>
       </h2>
-  
+
       <!-- Form -->
       <form class="max-w-4xl mx-auto space-y-4 sm:space-y-8">
         <!-- Name, Email, Tel, Message -->
@@ -415,12 +415,12 @@
             class="w-full px-4 py-2 sm:py-3 bg-[#1f2937] border border-[#383e4a] rounded-md focus:outline-none focus:ring focus:ring-[#B3A177]" />
           <input type="tel" placeholder="Telephone"
             class="w-full px-4 py-2 sm:py-3 bg-[#1f2937] border border-[#383e4a] rounded-md focus:outline-none focus:ring focus:ring-[#B3A177]" />
-          
+
           <!-- Message field now included here to benefit from consistent spacing -->
           <textarea placeholder="Message" rows="4"
             class="sm:col-span-2 w-full px-4 pt-2 pb-2 sm:py-3 resize-none bg-[#1f2937] border border-[#383e4a] rounded-md focus:outline-none focus:ring focus:ring-[#B3A177]"></textarea>
         </div>
-  
+
         <!-- Finance Inputs -->
         <div class="grid grid-cols-1 sm:grid-cols-2 gap-4 sm:gap-6">
           <div class="relative">
@@ -445,7 +445,7 @@
               class="w-full pl-7 pr-4 py-2 sm:py-3 bg-[#1f2937] border border-[#383e4a] rounded-md focus:outline-none focus:ring focus:ring-[#B3A177]" />
           </div>
         </div>
-  
+
         <!-- Submit -->
         <div class="text-center">
           <button type="submit"
@@ -456,9 +456,9 @@
       </form>
     </div>
   </section>
-  
 
-  <section class="bg-dark-blue-light text-white pt-8 pb-40 px-6">
+
+  <section class="bg-dark-blue-light text-white pt-8 pb-8 sm:pb-40 px-6">
     <div class="max-w-6xl mx-auto text-center">
       <!-- Heading -->
       <h2 class="text-3xl tracking-[0.25em] font-light uppercase mb-2">What Our Customers Say</h2>
